--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@react-three/drei": "^9.108.1",
 		"@react-three/fiber": "^8.16.8",
 		"@types/react-router-dom": "^5.3.3",
 		"@types/three": "^0.166.0",
