--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@types/react-router-dom": "^5.3.3",
 		"@types/three": "^0.166.0",
 		"gh-pages": "^6.1.1",
+		"leva": "^0.9.35",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-router-dom": "^6.24.0",
